# air-quality

./: .gitignore  Caddyfile  Icon.sketch  README.md  database.conf  deploy.sh  docker-compose.yml  notes.md  platformio.ini
backend/: Dockerfile  Pipfile  README.md  air-backend.service  main.py  pyproject.toml
backend/src/: aqi.py  database.py  main.py  query.py  refresh_data.py  schedule.py
backend/tests/: test_aqi.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: AQIMeter.tsx  App.tsx  Bar.tsx  Circles.tsx  MonthlyAQIChart.tsx  aqi_calculations.ts  index.css
lib/PMS/: LICENSE  PMS.cpp  PMS.h
sensor/functions/: index.js
sensor/src/: CAcerts.h  main.cpp
src/: main.cpp
svelte-frontend/: Dockerfile  package-lock.json  package.json
svelte-frontend/public/: global.css  index.html
svelte-frontend/src/: AQIMeter.svelte  App.svelte  Bar.svelte  Calendar.svelte  Circles.svelte  HeatMap.svelte  aqi_calculations.js
web/: index.html
webui/: index.html
