[tool.poetry]
name = "air-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "air_backend"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
APScheduler = "^3.10.1"
aiohttp = "^3.8.4"
pytz = "^2023.3"
SQLAlchemy = "^2.0.9"
aiosqlite = "^0.19.0"
greenlet = "^2.0.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
