[project]
name = "air-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.7,<4"
readme = "README.md"
dependencies = [
    "fastapi>=0.95.1,<0.96",
    "uvicorn>=0.21.1,<0.22",
    "apscheduler>=3.10.1,<4",
    "aiohttp>=3.8.4,<4",
    "pytz>=2023.3,<2024",
    "sqlalchemy>=2.0.9,<3",
    "aiosqlite>=0.19.0,<0.20",
]

[dependency-groups]
dev = [
    "autopep8>=2.0.2,<3",
    "pytest>=7.3.1,<8",
    "httpx>=0.24.0,<0.25",
    "asgi-lifespan>=2.1.0,<3",
    "pytest-asyncio>=0.21.0,<0.22",
]

[tool.hatch.build.targets.sdist]
include = ["air_backend"]

[tool.hatch.build.targets.wheel]
include = ["air_backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]
